# goit-pythonweb-hw-012

./: Dockerfile  Pipfile  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: 54f397d5f666_add_user.py  8f86746219cf_add_to_model_user_filed_confirmed.py  a742f6936d7d_add_user_role.py  ac49c7591c53_init.py  cf323191e928_add_refresh_token.py
postgres-data/base/13481/: pg_internal.init
postgres-data/global/: 1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  users.py
src/services/templates/: reset_password.html  verify_email.html
tests/: conftest.py  test_contacts_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_healthchecker.py  test_integration_users.py  test_users_repository_unit.py
