[tool.poetry]
name = "contacts"
version = "0.1.0"
description = ""
authors = ["Dima"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.37"
black = "^24.10.0"
alembic = "^1.14.1"
greenlet = "^3.1.1"
pydantic = "^2.10.5"
fastapi = "^0.115.6"
email-validator = "^2.2.0"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"
libgravatar = "^1.0.4"
python-multipart = "^0.0.20"
bcrypt = "3.2.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypy"], version = "^1.7.4" }
pydantic-settings = "^2.7.1"
slowapi = "^0.1.9"
fastapi-mail = "^1.4.2"
cloudinary = "^1.42.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
